2007-07-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/codes/iso_3166.xml:
	* data/codes/iso_639.xml:
	* data/codes/locales.txt:
	* gaupol/countries.py:
	* gaupol/languages.py:
	* gaupol/locales.py:
	Split languages to three modules.
	Read codes from files in gaupol.DATA_DIR.
	Rename functions to be less ambiguous.

	* gaupol/encodings.py:
	Rename functions to be less ambiguous.

2007-07-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py:
	Rename lengthlib_handler_id to ruler_handler_id.

2007-07-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/configobj.py (ConfigObj._quote):
	Quote strings containing "#".

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/RELEASING:
	Fix all remaining errors.

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.8.

	RELEASE 0.8

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* data/gaupol.gtk.conf.spec:
	* gaupol/gtk/conf/__init__.py:
	* setup.py:
	Rename conf.spec to gaupol.gtk.conf.spec.

2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/RELEASING:
	Update branch and tag names.

2007-07-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/generate-tests:
	* tools/hide:
	* tools/list-glade:
	* tools/pylint:
	Fix minor errors and style issues.

2007-07-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* TODO:
	Clean up to reflect what has actually been done.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/debug.py (_print_traceback):
	Add indented string to code_lines.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/debug.py (_print_traceback):
	Indent code manually to preserve formatting if copied.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/save.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/util.py:
	Fix remaining errors so that all unittests pass.

2007-07-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py: