@@ -1,3 +1,9 @@
+2007-07-23  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/scripts.py:
+	Rewrite to be consistent with gaupol.countries, gaupol.languages,
+	gaupol.locales and gaupol.encodings.
+
 2007-07-22  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* data/codes/iso_3166.xml:
